editorial track mostly finished

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -64,6 +64,10 @@ html body {
 	margin-top:100px;
 }
 
+.little-space {
+	margin-top:50px;
+}
+
 .questionCtn {
 	text-align: left;
 }
@@ -215,6 +219,11 @@ h1, h2, h3, h4, h5 {
 .super {
 	font-size: 80px;
 	line-height: 90px;
+}
+
+.semi-super {
+	font-size: 60px;
+	line-height: 65px;
 }
 
 .track-nav li {
