photo track complete

--- a/app/views/positions/editorial/_editorial_process.html.erb
+++ b/app/views/positions/editorial/_editorial_process.html.erb
@@ -1,7 +1,8 @@
 
 
-Scroll to the right to learn how a story flows through the system, from ideation to publishing
+<p>Scroll to the right to learn how a story flows through the system, from ideation to publishing</p>
 
+<i class="fa fa-arrows-h fa-3x"></i>
 
 <div class="timeline-window clearfix">
 	<div class="timeline-wrapper clearfix">
