--- a/app/views/positions/photo/_fave_photos.html.erb
+++ b/app/views/positions/photo/_fave_photos.html.erb
@@ -2,41 +2,41 @@
   <div class="row">
     <div class="col-sm-4">
       <img src="/assets/photo/11.png">
-      Great composition! Beautiful table! And we love the aerial shot.
+      <p>Great composition! Beautiful table! And we love the aerial shot.</p>
     </div>
     <div class="col-sm-4">
       <img src="/assets/photo/12.png">
-      Beautiful, bright colors and great lighting.
+      <p>Beautiful, bright colors and great lighting.</p>
     </div>
     <div class="col-sm-4">
       <img src="/assets/photo/13.png">
-      Nice crop — background isn’t distracting, but feels real.
+      <p>Nice crop — background isn’t distracting, but feels real.</p>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
       <img src="/assets/photo/14.png">
-      Nice depth including the bite — makes the photo more interesting and complex.
+      <p>Nice depth including the bite — makes the photo more interesting and complex.</p>
     </div>
     <div class="col-sm-4">
       <img src="/assets/photo/15.png">
-      Great perspective with awesome colors. Ask the restaurant to play with the light switches, if possible, and maybe find a wide-angle lens for interior shots (borrow one!).
+      <p>Great perspective with awesome colors. Ask the restaurant to play with the light switches, if possible, and maybe find a wide-angle lens for interior shots (borrow one!).</p>
     </div>
     <div class="col-sm-4">
       <img src="/assets/photo/16.png">
-      Perfectly framed —slightly off center as per the rule of thirds.
+      <p>Perfectly framed —slightly off center as per the rule of thirds.</p>
       
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
       <img src="/assets/photo/17.png">
-      Clean, white plate, thoughtfully placed apples, and the dripping honey is a fantastic detail.
+      <p>Clean, white plate, thoughtfully placed apples, and the dripping honey is a fantastic detail.</p>
 
     </div>
     <div class="col-sm-4">
       <img src="/assets/photo/18.png">  
-       Clean plate and wonderful attention to detail. Not a drip out of place and fantastic colors to boot.
+       <p>Clean plate and wonderful attention to detail. Not a drip out of place and fantastic colors to boot.</p>
     </div>
   </div>
 </div>
@@ -46,28 +46,28 @@
   <div class="row">
     <div class="col-sm-4">
       <img src="/assets/photo/21.png">
-      Distracting background (please move butterfly jars!) and too off-center.    </div>
+      <p>Distracting background (please move butterfly jars!) and too off-center.    </div>
     <div class="col-sm-4">
       <img src="/assets/photo/22.png">
-      FLASH! ‘Nuf said.
+     <p> FLASH! ‘Nuf said.</p>
    </div>
     <div class="col-sm-4">
       <img src="/assets/photo/23.png">
-      We’re not sure what this is — it needs context, and it needs no flash, and it needs to look less like a ball.Sometimes food looks better if you do less, and this is one of those times. 
+      <p>We’re not sure what this is — it needs context, and it needs no flash, and it needs to look less like a ball.Sometimes food looks better if you do less, and this is one of those times. </p>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
       <img src="/assets/photo/24.png">
-      This is framed too tightly. These cookies had mad potential, but the flash ruined them :(  
+      <p>This is framed too tightly. These cookies had mad potential, but the flash ruined them :(  </p>
     </div>
     <div class="col-sm-4">
       <img src="/assets/photo/25.png">  
-      The cutting board is the same color as the food, which makes the photos much less interesting! But what do you do if your cutting board happens to be the same color as the food? You don’t use the cutting board in the photo. Or you borrow your neighbor’s.
+      <p>The cutting board is the same color as the food, which makes the photos much less interesting! But what do you do if your cutting board happens to be the same color as the food? You don’t use the cutting board in the photo. Or you borrow your neighbor’s.</p>
     </div>
     <div class="col-sm-4">
       <img src="/assets/photo/26.png">
-      Way too orange — this should be color balanced. 
+     <p> Way too orange — this should be color balanced. </p>
     </div>
   </div>
   <div class="row">
@@ -77,7 +77,7 @@
     </div>
     <div class="col-sm-4">
       <img src="/assets/photo/28.png">  
-      There are many distracting background elements in this photo. That spoon handle jutting out of the top left needs to be moved. And be careful just showing part of the spoon dripping honey from the top. The chair in the background should have been moved as well.
+      <p>There are many distracting background elements in this photo. That spoon handle jutting out of the top left needs to be moved. And be careful just showing part of the spoon dripping honey from the top. The chair in the background should have been moved as well.</p>
     </div>
   </div>
 </div>
