--- a/app/views/positions/photo/_photo_process.html.erb
+++ b/app/views/positions/photo/_photo_process.html.erb
@@ -1,25 +1,45 @@
-We have found that there is most accountability when writers and photographers are paired together, so each knows who to ask for the things that they need. Depending on the size of the staff, a photographer will be paired with 2 to 3 writers.
-<strong>Scroll to the right to get an overview of the usual process:</strong>
-STEP 1
+<p>We have found that there is most accountability when writers and photographers are paired together, so each knows who to ask for the things that they need. Depending on the size of the staff, a photographer will be paired with 2 to 3 writers.</p>
+
+<p>Scroll to the right to learn how a story flows through the system, from ideation to publishing</p>
+<i class="fa fa-arrows-h fa-3x"></i>
+
+<div class="timeline-window clearfix">
+	<div class="timeline-wrapper clearfix">
+	<div class="timeline-step" id="step-1">
+<p class="label">STEP 1</p><br>
+
 Each week, a writer contacts his or her designated photographer for any photo needs.
-
-STEP 2
+	</div>
+	<div class="timeline-step">
+<p class="label">STEP 2</p><br>
 The writer explains the article or sends the text to the photographer, and they brainstorm specific photo ideas.
+	</div>
+	<div class="timeline-step">
+<p class="label">STEP 3</p><br>
 
-STEP 3
 The photographer has <strong>one week</strong> to take the photos.
+	</div>
+	<div class="timeline-step">
+<p class="label">STEP 4</p><br>
 
-STEP 4
 The photographer edits photos and chooses a handful of their best ones.
+	</div>
+	<div class="timeline-step">
+<p class="label">STEP 5</p><br>
 
-STEP 5
-The photographer uploads the photos to <a href="http://secretsauce.spoonuniversity.com/photo-process/#photo-guide-flickr">Flickr</a> and labels the tags properly.
+The writer notifies the copyeditor that the story is ready to go, and the copyeditor edits for grammar, obvious mistakes and things thThe photographer uploads the photos to <a class="link" href="/photo/<% @position %>/flickr">Flickr</a> and labels the tags properly.
+at just don’t make sense.
+	</div>
+	<div class="timeline-step">
+<p class="label">STEP 6</p><br>
 
-STEP 6
 The photographer emails the photo director when the photos are uploaded to Flickr.
+y edits, and refines the title and subtitle to be killer. If the story has major issues, it’s sent back to writer.
+	</div>
+	<div class="timeline-step">
+<p class="label">STEP 7</p><br>
 
-STEP 7
-The photo director looks over photos on Flickr and deletes any that are unusable for the site.
-
-STEP 8
-Writer gets photos off Flickr and inserts into article.
+The photo director looks over photos on Flickr and deletes any that are unusable for the site, and then the writer gets photos off Flickr and inserts into article.
+	</div>
+</div>
+</div>
