--- a/app/views/positions/position.html.erb
+++ b/app/views/positions/position.html.erb
@@ -37,7 +37,7 @@
 </div>
 </ul>
 <!-- Body -->
-<div class="track-body">
+<div class="track-body row">
 	<h1><%= @page.name %></h1>
 	<%= render "positions/#{@position.track(@page)}/#{@page.shortname}" %>
 <!-- Next Button -->
