--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,7 @@
 html body {
 	height: 100%;
+	font-size: 16px;
+	line-height: 22px;
 }
 
 .addendum {
@@ -24,6 +26,10 @@ html body {
 	text-transform:uppercase;
 }
 
+.flickr img {
+	box-shadow: 2px 2px 15px rgba(0,0,0,0.5);
+}
+
 .btn.btn-primary:hover {
 	background-color: #cc0066;
 }
@@ -39,6 +45,7 @@ html body {
 .box {
 	border: 1px solid #000000;
 	border-radius: 5px;
+	margin:25px 0;
 }
 
 .box-inner {
@@ -174,6 +181,7 @@ h1, h2, h3, h4, h5 {
 	box-shadow: 0px 0px 15px rgba(0,0,0,0.5);
 	min-height: 25px;
 	color: #ffffff;
+	font-size: 14px;
 }
 
 .navbar span {
@@ -236,7 +244,7 @@ h1, h2, h3, h4, h5 {
 }
 
 
-.editorial a {
+.editorial a, .panel-heading.editorial {
 	background-color: #f1a003;
 }
 
@@ -244,7 +252,7 @@ h1, h2, h3, h4, h5 {
 	background-color: #f9d99a;
 }
 
-.photo a {
+.photo a, .panel-heading.photo {
 	background-color: #00a2ca;
 }
 
@@ -252,7 +260,7 @@ h1, h2, h3, h4, h5 {
 	background-color: #99daea;
 }
 
-.marketing a {
+.marketing a, .panel-heading.marketing {
 	background-color: #829300;
 }
 
