--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -2,7 +2,7 @@
 	<% @positions.each do |position| %>
 	<div class="col-sm-4 col-md-3">
 		<div class="panel panel-default">
-		  <div class="panel-heading">
+		  <div class="panel-heading <%= position.track(position.pages.first) %>">
 		    <h3 class="panel-title"><%= position.name %></h3>
 		  </div>
 		  <div class="panel-body">
@@ -15,4 +15,4 @@
 		</div>
 	</div>
 	<% end %>
-</div>
+</div
