--- a/app/views/positions/photo/_photo_leadership.html.erb
+++ b/app/views/positions/photo/_photo_leadership.html.erb
@@ -1,47 +1,44 @@
-<p>How to be a great leader:</p>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <p class="small-caps">As photo director</p> 
 
-<p>
-  As photo director, you’re in charge of maintaining the aesthetic quality of the site. The photos on the site reflect your work, so if there’s something you don’t love, ask the photographer to reshoot, or take the post down altogether. Here are some tips to maintaining a healthy photo team:
-</p>
-
-<p><strong>HAVE INCREDIBLE COMMUNICATION.</strong></p>
-<p>
-  Respond to emails quickly, get everyone’s phone numbers so you can text them in a pinch. You set the standard.
-</p>
-
-<p><strong>LEAD PHOTO WORKSHOPS.</strong></p>
-<p>
-  Ask photogs to bring cameras to a meeting and:
-</p>
-<ul>
-  <li>Teach them how to use settings on their cameras</li>
-  <li>Critique existing photos — show them what’s good and bad and why</li>
-  <li>Practice! Bring food to the meeting and have photographers take photos.Tell them what’s good and bad in the moment so they can improve</li>  
-  <li>Do a photo editing demo<li>
-</ul>
-
-<p><strong>SET DEADLINES AND STICK TO THEM.</strong></p>
-<p>
-  Keep track of who isn’t meeting their deadlines, and follow up with them. Ask why. Let them know you’re watching.
-</p>
-
-<p><strong>MAKE AND PRINT A CHEAT SHEET FOR YOUR TEAM.</strong></p>
-<p>
-  It could include photo tips and camera settings.
-</p>
-
-<p><strong>ORGANIZE PHOTO SHOOTS.</strong></p>
-<p>
-  Come up with a few content/feature ideas, rent out a space with great lighting, have everyone bring props and take photos all day! You can knock out a bunch of photos for stories in one long sitting.
-</p>
-
-<p><strong>GIVE CONSTRUCTIVE FEEDBACK.</strong></p>
-<p>
-  Praise your photographers if they put up some incredible photos, and give constructive criticism on those photos that aren’t so good.
-</p>
-<p><strong>HAVE BONDING EVENTS (OVER FOOD OF COURSE).</strong></p>
-<p>
-  Organize a potluck for the photo team, and take lots of pictures!
-</p>
+    <p>You’re in charge of maintaining the aesthetic quality of the site. The photos on the site reflect your work, so if there’s something you don’t love, ask the photographer to reshoot, or take the post down altogether. Here are some tips to maintaining a healthy photo team:</p>
+    <ul class="list-unstyled leadership">
+      <li><h4>HAVE INCREDIBLE COMMUNICATION.</h4>
+        Respond to emails quickly, get everyone’s phone numbers so you can text them in a pinch. You set the standard.</li>
+        <li><h4>LEAD PHOTO WORKSHOPS.</h4>
+          Ask photogs to bring cameras to a meeting and:
+          (1) Teach them how to use settings on their cameras. (2) Critique existing photos — show them what’s good and bad and why. (3) Practice! Bring food to the meeting and have photographers take photos. (4) Tell them what’s good and bad in the moment so they can improve. (5) Do a photo editing demo.
+          </li>
+          <li><h4>SET DEADLINES AND STICK TO THEM.
+          </h4>
+          Keep track of who isn’t meeting their deadlines, and follow up with them. Ask why. Let them know you’re watching.</li>
+          <li>
+            <h4>MAKE AND PRINT A CHEAT SHEET FOR YOUR TEAM.</h4>
+            It could include photo tips and camera settings.
+          </li>
+          <li>
+            <h4>BE NICE, BUT BE STERN.
+            </h4>
+            The #1 regret from our early chapters was that they didn’t set expectations from the start, and people thought Spoon was a blow off club. Make sure everyone knows Spoon is a commitment.
+          </li>
+          <li>
+            <h4>ORGANIZE PHOTO SHOOTS.
+            </h4>
+            Come up with a few content/feature ideas, rent out a space with great lighting, have everyone bring props and take photos all day! You can knock out a bunch of photos for stories in one long sitting.
+          </li>
+          <li>
+            <h4>GIVE CONSTRUCTIVE FEEDBACK.
+            </h4>
+            Praise your photographers if they put up some incredible photos, and give constructive criticism on those photos that aren’t so good.
+          </li>
+          <li>
+            <h4>HAVE BONDING EVENTS (OVER FOOD OF COURSE).
+            </h4>
+            Organize a potluck for the photo team, and take lots of pictures!
+          </li>
+        </ul>
+      </div>
+    </div>
 
 
