--- a/app/views/positions/photo/_photo_sections.html.erb
+++ b/app/views/positions/photo/_photo_sections.html.erb
@@ -1,47 +1,64 @@
-<div class="row-fluid">
-  <div class="span10 offset1">
-    <p>
+<div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
+    <h4>
       There are different photo requirements for each type of article. Read below to see what’s required, and bookmark this page so you’ll never forget.
-    </p>
+    </h4>
   </div>
 </div>
-<div class="row-fluid margin-30t">
-  <div class="span6 boxed-up">
-    <p class="little-black-label">RECIPES</p>
-    <p class="center">
-      Need photographs of every single step of the process. Two photos of the final dish are mandatory, one for the feature photo (landscape orientation) and one for the end of the post. Take tons of photos, all with natural light, so editors can choose the best.
-    </p>
-  </div>
-  <div class="span6 boxed-up">
-    <p class="little-black-label">RESTAURANTS</p>
-    <p class="center">
-      Must have photos of the interior, exterior and dishes with the names of each dish in the caption. You don’t have to spend money — take photos of food as it comes out of the kitchen, ask a patron if you could snap a photo, or set up a press dinner to get a free tasting and take pics of every dish.
-    </p>
-  </div>
-</div>
-<div class="row-fluid">
-<div class="span6 boxed-up">
-  <p class="little-black-label">FOOD FOR THOUGHT</p>
-    <p class="center">
-      Each article must have an original feature photo and a handful of photos in-text. If the post is a long list, suggest using other related photos from Spoon, with proper photo credit.
-    </p>
-  </div>
-  <div class="span6 boxed-up">
-    <p class="little-black-label">KITCHEN 101</p>
-    <p class="center">
-      ow-to articles must have photos of every step of the process. Guides should have several photos of the food (eg. the different types, sizes, colors, shapes, etc.). Take photos at a grocery store if you don&#8217;t have items on hand.
-    </p>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="box">
+      <p class="box-label">RECIPES</p>
+      <div class="box-inner">
+        <img src="/assets/photo/13.png">
+        Need photographs of every single step of the process. Two photos of the final dish are mandatory, one for the feature photo (landscape orientation) and one for the end of the post. Take tons of photos, all with natural light, so editors can choose the best.
+      </div>
     </div>
-</div>
-<div class="row-fluid">
-<div class="span6 boxed-up">
-  <p class="little-black-label">ON CAMPUS/STUDENTS</p>
-  <p class="center">
-    Each article must have at least one relevant feature photo and one in-text photo. The more the merrier!
-  </p>
-</div>
-  <div class="span6 boxed-up">
-    <p class="little-black-label">EVENTS</p>
-    <p class="center">The more photos you have of students, the more clicks (guaranteed). Go all out on this one.</p>
   </div>
-</div>
+  <div class="col-sm-4">
+    <div class="box">
+      <p class="box-label">RESTAURANTS</p>
+      <div class="box-inner">
+        <img src="/assets/photo/15.png">
+        Must have photos of the interior, exterior and dishes with the names of each dish in the caption. You don’t have to spend money — take photos of food as it comes out of the kitchen, ask a patron if you could snap a photo, or set up a press dinner to get a free tasting and take pics of every dish.
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+      <div class="box">
+        <p class="box-label">FOOD FOR THOUGHT</p>
+        <div class="box-inner">
+         <img src="/assets/food-for-thought.jpg">
+
+          Each article must have an original feature photo and a handful of photos in-text. If the post is a long list, suggest using other related photos from Spoon, with proper photo credit.
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="box">
+        <p class="box-label">KITCHEN 101</p>
+        <div class="box-inner">
+          <img src="/assets/kitchen-101.jpg">
+          How-to articles must have photos of every step of the process. Guides should have several photos of the food (eg. the different types, sizes, colors, shapes, etc.). Take photos at a grocery store if you don&#8217;t have items on hand.
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="box">
+        <p class="box-label">ON CAMPUS/STUDENTS</p>
+        <div class="box-inner">
+          <img src="/assets/photo/12.png">
+          Each article must have at least one relevant feature photo and one in-text photo. The more the merrier!
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="box">
+          <p class="box-label">EVENTS</p>
+          <img src="/assets/events.jpg">
+          <div class="box-inner">The more photos you have of students, the more clicks (guaranteed). Go all out on this one.</div>
+        </div>
+      </div>
+    </div>
