--- a/app/views/positions/marketing/_marketing_structure.html.erb
+++ b/app/views/positions/marketing/_marketing_structure.html.erb
@@ -1,9 +1,9 @@
-</p>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
 <p>
   To ensure everyone plays an active role, we suggest dividing up the team into different projects. Here are some suggested ongoing project leaders:
 </p>
-<p><strong>
-  SOCIAL MEDIA CHAIR(S)</strong> create social media calendar, make sure all platforms are covered and updated daily, boost engagement and followers
+<p><strong>SOCIAL MEDIA CHAIR(S)</strong> create social media calendar, make sure all platforms are covered and updated daily, boost engagement and followers
 </p>
 <p><strong>
   EVENT CHAIR(S)</strong> lead brainstorms, organize and plan the logistics for all events
@@ -24,8 +24,17 @@
   PHILANTHROPY CHAIR(S)</strong> organize ways to give back to the community. Partner with existing charities or set up your own canned food drive or soup kitchen.
 </p>
 <p>
-  Each school can decide on which roles work best for them. Feel free to add a position that’s not already there or have 1 or more chair for each role. This setup will allow your team to have targeted, divided responsibilities, to do more each week, and to be consistently active on campus. NOTE: Each marketing chair should ask for help from other chairs to carry out events, campaigns, etc. If the PR chair organizes fliering, for example, everyone should help flier.
-</p>
+  Each school can decide on which roles work best for them. Feel free to add a position that’s not already there or have 1 or more chair for each role. This setup will allow your team to have targeted, divided responsibilities, to do more each week, and to be consistently active on campus.</p>
+<div class="row">
+    <div class="box">
+      <p class="box-label">NOTE</p>
+  <div class="box-inner">
+  Each marketing chair should ask for help from other chairs to carry out events, campaigns, etc. If the PR chair organizes fliering, for example, everyone should help flier.
+</div>
+</div>
+</div>
 <p><strong>HOW DO YOU APPOINT POSITIONS?</strong></p>
 <p>
-  Take a vote! Have each marketing member give a 30-second pitch of why they’d be the best person for xx position, and let the debate begin. AKA heads down, hands up, vote.
+  Take a vote! Have each marketing member give a 30-second pitch of why they’d be the best person for xx position, and let the debate begin. AKA heads down, hands up, vote.</p>
+</div>
+</div>
