--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,8 +22,8 @@
 		<h1 class="semi-super">So, <%= current_user.first_name %>... you're the <%= current_user.status.position.name %> at <a class="link" href="schools/<%= current_user.school.shortname %>"><%= current_user.school.name %></a>.</h1>
 	</div>
 </div>
-<div class="row">
-	<div class="col-md-6 profile">
+<div class="row profile">
+	<div class="col-md-8">
 		
 
 	<p class="small-caps">It's your job to:</p>
@@ -107,7 +107,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-6">
+<div class="col-md-4 border-left">
 
 	<!--  SEE YOUR PROGRESS *******************************************************      -->
 
