--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -305,6 +305,10 @@ h1, h2, h3, h4, h5 {
 	clear:left;
 }
 
+.border-left {
+	border-left: 1px solid black;
+}
+
 .btn.btn-primary {
 	background-image: none;
 	background-color: #000000;
@@ -522,6 +526,18 @@ a.retake{
 
 .quiz-title{
 	color:#000;
+}
+
+.question {
+	font-size:28px;
+	line-height:35px;
+	font-weight:900;
+	margin-top:40px;
+	text-transform:uppercase;
+}
+
+.faq {
+	text-align:left;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
