--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
     <div class="list-group">
       <%= link_to "Log out", destroy_session_path(:user), :method => :delete, :class => "list-group-item" %>
       <a class="list-group-item" href="<%= edit_user_registration_path %>">Edit Profile</a>
-      <a class="list-group-item" href="<%= current_user.position.track(@page) %>/<%= current_user.position.shortname %>/<% if current_user.position.next_page(current_user.status.pages.last) %><%= current_user.position.next_page(current_user.status.pages.last).shortname %><% else %><%= current_user.position.pages.first.shortname %><% end %>">My Track</a>      
+      <a class="list-group-item" href="<%= current_user.position.track(current_user.last_page) %>/<%= current_user.position.shortname %>/<% if current_user.position.next_page(current_user.last_page) %><%= current_user.position.next_page(current_user.last_page).shortname %><% else %><%= current_user.position.pages.first.shortname %><% end %>">My Track</a>      
       <a class="list-group-item" href="#">Publishing Spreadsheet</a>
       <a class="list-group-item" href="<%= faq_path %>">FAQ</a>
       <a class="list-group-item" href="#">Brand Assets</a>
