--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -115,6 +115,15 @@
 	<h4>You are <%= current_user.percent_complete %>% through your track.</h4>
   <div id="personal_<%= current_user.id %>"></div>
   
+ 
+	<!--  BEGINYOUR TRACK *******************************************************      -->
+	
+
+		<a class="btn btn-primary btn-lg begin-track" href="<%= current_user.position.track(@page) %>/<%= current_user.position.shortname %>/<% if current_user.position.next_page(current_user.status.pages.last) %><%= current_user.position.next_page(current_user.status.pages.last).shortname %><% else %><%= current_user.position.pages.first.shortname %><% end %>">My Track</a>
+
+		<!--  SEE YOUR QUIZ SCORES *******************************************************      -->
+	
+
 	<% if current_user.scores %>
 		<% track = current_user.position.track(current_user.position.pages.first) %>
 		<div class="quiz-wrapper">
@@ -130,11 +139,10 @@
 		</div>
   <% end %> 
 
- 
-	<!--  BEGINYOUR TRACK *******************************************************      -->
-	
 
-		<a class="btn btn-primary btn-lg begin-track" href="<%= current_user.position.track(@page) %>/<%= current_user.position.shortname %>/<% if current_user.position.next_page(current_user.status.pages.last) %><%= current_user.position.next_page(current_user.status.pages.last).shortname %><% else %><%= current_user.position.pages.first.shortname %><% end %>">My Track</a>
+
+
+
 	
 
 <script>
