--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,15 +49,17 @@
   <div id="menu" class="quicklinks">
     <a class="list-group-item" href="/schools/<%= current_user.school.shortname %>" style="background-color: <%= current_user.school.color_1 %>; color: <%= current_user.school.color_2 %>  "><%= current_user.school.name %></a>
     <div class="list-group">
-      <%= link_to "Log out", destroy_session_path(:user), :method => :delete, :class => "list-group-item" %>
       <a class="list-group-item" href="<%= edit_user_registration_path %>">Edit Profile</a>
       <a class="list-group-item" href="<%= current_user.position.track(current_user.last_page) %>/<%= current_user.position.shortname %>/<% if current_user.position.next_page(current_user.last_page) %><%= current_user.position.next_page(current_user.last_page).shortname %><% else %><%= current_user.position.pages.first.shortname %><% end %>">My Track</a>      
       <a class="list-group-item" href="#">Publishing Spreadsheet</a>
       <a class="list-group-item" href="<%= faq_path %>">FAQ</a>
       <a class="list-group-item" href="#">Brand Assets</a>
-      <a class="list-group-item border-top" href="<%= positions_path %>">All Positions</a>
-      <a class="list-group-item" href="/staff">All Staffers</a>
-      <a class="list-group-item" href="<%= schools_path %>">All Schools</a>
+      <a class="list-group-item border-top" href="<%= positions_path %>">Position Directory</a>
+      <a class="list-group-item" href="/staff">Staff Directory</a>
+      <a class="list-group-item" href="<%= schools_path %>">Social Media by School</a>
+      <div class="little-space"></div>
+      <%= link_to "Log out", destroy_session_path(:user), :method => :delete, :class => "list-group-item" %>
+
     </div>
   </div>
   <% end %>
