--- a/app/views/positions/agreement.html.erb
+++ b/app/views/positions/agreement.html.erb
@@ -1,4 +1,4 @@
-<h4>Contributor Agreement</h4>
+<h2>Contributor Agreement</h2>
 
 <div class="agreement-container">
 	<div class="contrib-agreement"> 
@@ -107,14 +107,14 @@ waived in whole or in part, only by a writing signed by both parties. </p>
 
 
 
-<div class="empty-space"></div>
+<div class="little-space"></div>
 
 
 
 <!-- Agreement goes here -->
 
 <form action="<%= agree_path %>" method="post">
-	<button class="btn btn-primary">I Agree</button>
+	<button class="btn btn-primary btn-lg">I Agree</button>
 	
 </form>
 
