--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,14 +8,14 @@
 
 <!--  SEE YOUR RESPONSIBILITIES *******************************************************      -->
 <div class="row">
-	<div class="col-sm-10 col-sm-offset-1">
+	<div <% if current_user.scores.empty? %> class="col-sm-10 col-sm-offset-1"<% end %> >
 <div class="row">
 	<div class="col-md-12">
 		<h1 class="semi-super">So, <%= current_user.first_name %>... you're the <%= current_user.status.position.name %> at <a class="link" href="schools/<%= current_user.school.shortname %>"><%= current_user.school.name %></a>.</h1>
 	</div>
 </div>
 <div class="row profile">
-	<div class="col-md-8">
+	<div <% if current_user.scores.empty? %> class="col-md-8" <% else %> class="col-md-6" <% end %> >
 		
 
 	<p class="label <%= current_user.track %>">It's your job to</p>
@@ -98,7 +98,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-4 border-left">
+<div class="col-md-4 border-left <% unless current_user.scores.empty? %> border-right <% end %> ">
 
 	<!--  SEE YOUR PROGRESS *******************************************************      -->
 
@@ -115,7 +115,9 @@
 		<!--  SEE YOUR QUIZ SCORES *******************************************************      -->
 	
 
-	<% if current_user.scores %>
+	<% unless current_user.scores.empty? %>
+	</div>
+	<div class="col-md-2">
 		<% track = current_user.track %>
 		<div class="quiz-wrapper">
 	    <% current_user.scores.each do |score| %>
