--- a/app/views/positions/photo/_photo_editing.html.erb
+++ b/app/views/positions/photo/_photo_editing.html.erb
@@ -3,22 +3,22 @@
 
 <div class="row">
   <div class="col-sm-6">
-    <p>SIMPLE</p>
-    <p>USING IPHOTO</p>
+    <p class="label">SIMPLE</p>
+    <h3>Using iPhoto</h3>
     <iframe src="//player.vimeo.com/video/81031346" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
     
   <div class="col-sm-6"> 
-    <p>FLICKR</p>
-    <p>USING FLICKR</p>
+    <p class="label">FLICKR</p>
+    <h3>Using Flickr</h3>
     <iframe src="//player.vimeo.com/video/85961377" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 </div>
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-sm-6">
     <p>ADVANCED</p>
     <p>USING PHOTOSHOP</p>
     <p>VIDEO COMING SOON!</p>
   </div>
-</div>
+</div> -->
