sort added to staff page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -561,6 +561,10 @@ a.retake{
 	text-align:left;
 }
 
+#sort-buttons thead tr th{
+	padding:5px;
+}
+
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
 .ig-b-24 {
 	background-image: url(//badges.instagram.com/static/images/ig-badge-sprite-24@2x.png);
